[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abmptools"
version = "2.2.0"
description = "Pre/post-processing and analysis toolkit for ABINIT-MP Fragment Molecular Orbital calculations"
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
authors = [
    {name = "Koji Okuwaki", email = "koujioku81@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["FMO", "ABINIT-MP", "IFIE", "PIEDA", "fragment molecular orbital", "computational chemistry"]

[project.urls]
Homepage = "https://github.com/kojioku/abmptools"
Repository = "https://github.com/kojioku/abmptools"
Documentation = "https://github.com/kojioku/abmptools/blob/main/docs/ABMPTools-user-manual.md"
Changelog = "https://github.com/kojioku/abmptools/blob/main/CHANGELOG.md"

[project.optional-dependencies]
amorphous = [
    "openff-toolkit>=0.14.0",
    "openff-interchange>=0.3.0",
    "openmm>=8.0",
]
membrane = [
    "parmed>=4.0",
    # External tools (conda-only — install via micromamba):
    #   gromacs (>=2021)  — gmx grompp / mdrun / wham / trjconv
    #   ambertools (>=22) — tleap, packmol-memgen, antechamber, parmchk2
    # Optional: gromacs[build=nompi_cuda*] for GPU offload (separate env).
    # See docs/dependencies.md for the full recipe.
]
cg = [
    "vermouth>=0.10",   # martinize2 (PyPI、Apache-2.0)
    "insane>=1.2",      # Martini lipid bilayer assembly (PyPI、GPL-2.0)
                        # subprocess 経由のみ、ソース改変・同梱なし
    "pyyaml>=6.0",      # YAML 入力 (optional; JSON only でも動く)
    # External tools (subprocess、conda 推奨):
    #   gromacs (>=2021)  — gmx insert-molecules / solvate / genion / grompp /
    #                       make_ndx / mdrun / wham
    #   ambertools (>=22) — tleap (推奨、不在時は extended-backbone fallback)
    # Force field files (本パッケージ未同梱、cgmartini.nl から取得):
    #   cg.peptide:  martini_v3.0.0.itp / _solvents_v1 / _ions_v1
    #                (+ optional water.gro, auto-gen via gmx insert-molecules)
    #   cg.membrane: 上記 3 ITP + martini_v3.0.0_phospholipids_v1.itp
    # See abmptools/cg/peptide/README.md and abmptools/cg/membrane/README.md.
]
grest = [
    "matplotlib>=3.5",  # replica transition / acceptance / PMF プロット
    # External tools (subprocess only, never bundled):
    #   GENESIS spdyn / atdyn / remd_convert (>=2.1) — LGPL-3.0-or-later
    #     build from https://github.com/genesis-release-r-ccs/genesis
    #     (icx で fileio_data_.c の ftello64/fseeko64 を ftello/fseeko に
    #      置換するパッチが必要な場合あり。docs/grest.md 参照)
    #   ambertools (>=22) — tleap (必須) + cpptraj (around モード時)
    #   mpirun (OpenMPI / MPICH) — 並列レプリカ実行
    # Force field files: AmberTools 同梱 (ff19SB / TIP3P)、本パッケージは追加 ITP なし。
    # See abmptools/genesis/grest/__init__.py + docs/grest.md.
]
mmgbsa = [
    "biopython>=1.80",  # PDB splitter (Stage 1)
    "matplotlib>=3.5",  # ΔG_bind 棒グラフ (Stage 4、grest と shared)
    # External tools (subprocess only, never bundled):
    #   GENESIS atdyn (>=2.1) — LGPL-3.0-or-later
    #     build from https://github.com/genesis-release-r-ccs/genesis
    #   ambertools (>=22) — tleap (必須)
    #   acpype (>=2022.7.21) — GPL-3.0、ligand GAFF/GAFF2 + AM1-BCC
    #     pip install acpype  または  conda install -c conda-forge acpype
    #     subprocess only (mere aggregation per GPL FAQ)
    #   mpirun (OpenMPI / MPICH) — `mpirun -np 1 atdyn`
    # Force field default: ff14SB + DNA.OL15 + RNA.OL3 + TIP3P + GAFF/GAFF2
    # (genesis.grest の ff19SB とは意図的に別、MM/GBSA で広く使われる安定 default)。
    # See abmptools/genesis/mmgbsa/__init__.py + docs/mmgbsa.md.
]
fragmenter = [
    "rdkit-pypi>=2022.09",  # 分子構造の正規化 (canonical SMILES)、SVG 描画、bond perception
                            # PyPI、BSD-3-Clause
    # Optional: Open Babel CLI (`obabel`) — bond perception フォールバック (subprocess)
]
crystal = [
    # Phase A は legacy ファイル (numpy/pandas のみ) を再 export するだけなので
    # 追加依存なしでも動く。Phase C 以降で必須:
    "ase>=3.22",       # CIF 読み込み、対称展開、スーパーセル (LGPL-2.1+)
    "pyyaml>=6.0",     # YAML config loader (JSON でも動くが推奨)
    # External tools (subprocess only, never bundled):
    #   abinitmp (Open ver.1 rev20+) — `--run-local` 時のみ。HPC ジョブ提出は
    #     abmptools.crystal が job script を出力し、ユーザが pjsub/sbatch する
    # See abmptools/crystal/__init__.py + docs/crystal.md (Phase D 追加予定).
]
jupyter = [
    "ipywidgets>=8.0",  # notebook UI のインタラクティブ要素 (dropdown / checkbox / button)
    "ipykernel",        # Jupyter notebook server カーネル
    # 注: A 経路 (Jupyter UI) を使う場合のみ必要。CLI ヘッドレス経路 (C) では不要。
]
hbond = [
    "matplotlib>=3.5",  # count vs record プロット (任意)
    # 必須: numpy (本体)、UDFManager (OCTA 同梱、PyPI には無い)
    # Jupyter UI を使う場合は [jupyter] + [fragmenter] (rdkit) を併用。
    # External tools (任意):
    #   OCTA gourmet — 生成された colored.bdf の可視化に使う
    # See abmptools/hbond/__init__.py + docs/hbond.md.
]
formulation = [
    "parmed>=4.0",          # prmtop → GROMACS top コンバート
    "rdkit-pypi>=2022.09",  # SMILES → 3D embed (small molecule の初期座標)
    "matplotlib>=3.5",      # 解析プロット
    # External tools (subprocess only, never bundled):
    #   ambertools (>=22) — tleap (必須, ff14SB + GAFF2)
    #   acpype (>=2022.7.21) — GPL-3.0, GAFF2 + AM1-BCC, mere aggregation
    #     pip install acpype  または  conda install -c conda-forge acpype
    #   packmol — multi-component cubic-box random placement
    #   gromacs (>=2021) — gmx grompp / mdrun / hbond / sasa / dssp / wham
    # Force field default: ff14SB (peptide) + GAFF2 (small mol) + TIP3P + JC ions
    # (CHARMM36 + CGenFF は学術ライセンスのため採用せず — 商用利用可能な OSS のみ)
    # See abmptools/formulation/__init__.py + docs/formulation.md.
]
formulation-analysis = [
    # MDAnalysis is GPL-2.0 → user opt-in install only; abmptools wheel
    # itself does not ship or link MDAnalysis code.
    "MDAnalysis>=2.6,<3.0",
    "networkx>=3.0",
    "matplotlib>=3.5",
    # See docs/licenses_third_party.md for the GPL posture rationale.
]
formulation-openff = [
    # Windows native build route (force_field_route="openff"): tleap/acpype 不要。
    # all-pip / all-OS で AmberTools を回避する protein-aware パイプライン。
    # 注 (Windows conda): メタパッケージ openff-toolkit は AmberTools に hard-depend し
    #   Windows で conda solve 不能。 conda 経由なら openff-toolkit-base (RDKit backend、
    #   ambertools 非依存) を使う。 pip の openff-toolkit は ambertools を pip 依存に
    #   持たないので install 自体は可 (AM1-BCC=sqm は不可だが library charges は OK)。
    #   docs/platform_support.md の Windows recipe / .github/workflows/windows-native.yml 参照。
    "openff-toolkit>=0.14.0",      # Topology.from_pdb (multi-chain + disulfide)
    "openff-interchange>=0.3.0",   # SMIRNOFF → GROMACS top/gro
    "openff-amber-ff-ports>=0.0.3", # ff14SB SMIRNOFF (protein library charges)
    "openff-nagl>=0.3",            # 小分子の ML-AM1-BCC 電荷 (sqm 不要、 Windows native)
    "openff-nagl-models>=0.1",     # NAGL の学習済みモデル (.pt) 同梱
    "openmm>=8.0",                 # PDBFixer backend
    "pdbfixer>=1.9",               # water 除去 + 欠損補完 + explicit H 付加
    "rdkit-pypi>=2022.09",         # small molecule SMILES → 3D
    "matplotlib>=3.5",
    # sequence からの peptide 3D build に必要 (pdb_path 入力時は不要):
    "PeptideBuilder>=1.1",         # sequence → extended chain (natural L-AA)
    "biopython>=1.79",             # PeptideBuilder の PDB I/O
    # External tools (subprocess only): packmol、 gmx (solvate/genion/editconf)。
    # See docs/platform_support.md "OpenFF route (実装済)" 節。
]
geomopt = [
    "pyscf",
    "ase",
]
mace = [
    "ase",
    "mace-torch",
    "torch",
]
test = [
    "pytest",
]

[project.scripts]
abmp-getifiepieda = "abmptools.getifiepieda:main"
abmp-generateajf = "abmptools.generateajf:main"
abmp-log2cpf = "abmptools.log2cpf:main"
abmp-log2config = "abmptools.log2config:main"
abmp-convertcpf = "abmptools.convertcpf:main"
abmp-generate-difie = "abmptools.generate_difie:main"
abmp-cpf2ifielist = "abmptools.cpf2ifielist:main"
abmp-getcharge = "abmptools.getcharge:main"
abmp-pdb2fmo = "abmptools.pdb2fmo:main"
abmp-udf2fmo = "abmptools.udf2fmo:main"
abmp-pdbmodify = "abmptools.pdbmodify:main"
abmp-ajf2config = "abmptools.ajf2config:main"
abmp-ajfserial = "abmptools.ajfserial:main"
abmp-addsolvfrag = "abmptools.addsolvfrag:main"
abmp-crystal = "abmptools.crystal.cli:main"

[tool.setuptools.packages.find]
include = ["abmptools*"]
exclude = ["tests*", "docs*", "sample*"]

[tool.setuptools.package-data]
abmptools = ["f90/bin/*.so", "gro2udf/default_template*.udf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that exercise heavy scientific stacks (OpenFF, Packmol, AmberTools). Skipped if deps are absent; can be filtered with `-m 'not slow'`.",
]
